--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </section>
 
 <section class="texttwo"
-  <p>Dennis Tajer, An American Airlines pilot and a member of the Allied Pilots Association, the largest independent pilots’ union that represents an estimated 15,000 pilots, is hopeful about the increased funding that will aid the airline industry and its direct employees.</p>
+  <p>Dennis Tajer, An American Airlines pilot and a member of the Allied Pilots Association, the largest independent pilots’ union that represents an estimated 15,000 American Airline pilots proclaims the company was doing what they could.</p>
   <p> “We value our customers and understand money is tight. Issuing travel vouchers was our way of providing the next best option. We were managing as best we could at the time, considering the circumstances," he said. </p>
 </section>
 
